<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#f9ca24"
        android:orientation="vertical">

        <TextView
            android:id="@+id/SignUpActivity_Layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Sign Up"
            android:textColor="#000000"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <TextView
                    android:textColor="#000000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:text="Email Address"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/email_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
                <TextView
                    android:id="@+id/emailStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#BA0C0C" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <TextView
                    android:textColor="#000000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:text="Password"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/password_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/passwordStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#BA0C0C" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/createAccount_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="createAccountOnButtonClick"
                    android:padding="20dp"
                    android:text="Create Account"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/signUpStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>